force-app/main/default/objects/Branch__c/Branch__c.object-meta.xml
<CustomObject>
    <label>Branch</label>
    <nameField>
        <displayFormat>B-{000}</displayFormat>
        <label>Branch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>