force-app/main/default/objects/Branch__c/fields/Formula5__c.field-meta.xml
<CustomField>
    <fullName>Formula5__c</fullName>
    <formula>IF(AND( Branch2__r.Salary__c &lt;1, Branch1__r.NewEmail__c ==&apos;bc@abc.com&apos;),&quot; $Label.DX_API &quot;,
 $Label.kcs_dev__dx_api2 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula5</label>
    <type>Text</type>
</CustomField>