force-app/main/default/objects/Branch__c/fields/ImageFormula__c.field-meta.xml
<CustomField>
    <fullName>ImageFormula__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/download/06828000007fAGiAAM&quot;, &apos;image alternate text&apos;,240,320)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ImageFormula</label>
    <type>Text</type>
</CustomField>