force-app/main/default/objects/Branch__c/fields/New_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Email__c</fullName>
    <defaultValue>UPPER( $Setup.Custom_Test1__c.a__c )</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>New Email</label>
    <type>Email</type>
</CustomField>