force-app/main/default/objects/Branch__c/fields/New_Phone__c.field-meta.xml
<CustomField>
    <fullName>New_Phone__c</fullName>
    <defaultValue>$User.MobilePhone</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>New Phone</label>
    <type>Phone</type>
</CustomField>