force-app/main/default/objects/Branch__c/recordTypes/NewRecordType.recordType-meta.xml
<RecordType>
    <fullName>NewRecordType</fullName>
    <active>true</active>
    <label>NewRecordType</label>
</RecordType>