force-app/main/default/objects/Branch__c/recordTypes/NEWTEST.recordType-meta.xml
<RecordType>
    <fullName>NEWTEST</fullName>
    <active>true</active>
    <label>NEWTEST</label>
</RecordType>